--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>918</width>
-    <height>688</height>
+    <width>824</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -28,7 +28,7 @@
   <widget class="QWidget" name="centralWidget">
    <layout class="QVBoxLayout" name="verticalLayout_7" stretch="10,3">
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout" stretch="3,5">
+     <layout class="QHBoxLayout" name="horizontalLayout" stretch="4,5">
       <item>
        <widget class="QGroupBox" name="listWgt">
         <property name="sizePolicy">
@@ -39,7 +39,7 @@
         </property>
         <property name="minimumSize">
          <size>
-          <width>370</width>
+          <width>0</width>
           <height>0</height>
          </size>
         </property>
@@ -52,91 +52,123 @@
         <property name="title">
          <string>资源列表</string>
         </property>
-        <layout class="QVBoxLayout" name="listLayout" stretch="1,3,0,3">
+        <layout class="QVBoxLayout" name="listLayout" stretch="2,5,0,5">
          <property name="topMargin">
           <number>20</number>
          </property>
          <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_2">
-           <property name="sizeConstraint">
-            <enum>QLayout::SetMinAndMaxSize</enum>
+          <widget class="QWidget" name="listPbnWgt" native="true">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
            </property>
-           <item>
-            <widget class="QPushButton" name="refreshPbn">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="minimumSize">
-              <size>
-               <width>0</width>
-               <height>55</height>
-              </size>
-             </property>
-             <property name="maximumSize">
-              <size>
-               <width>16777215</width>
-               <height>55</height>
-              </size>
-             </property>
-             <property name="text">
-              <string>刷新</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QPushButton" name="syncPbn">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="minimumSize">
-              <size>
-               <width>0</width>
-               <height>55</height>
-              </size>
-             </property>
-             <property name="maximumSize">
-              <size>
-               <width>16777215</width>
-               <height>55</height>
-              </size>
-             </property>
-             <property name="text">
-              <string>同步</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QPushButton" name="modePbn">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="minimumSize">
-              <size>
-               <width>0</width>
-               <height>55</height>
-              </size>
-             </property>
-             <property name="maximumSize">
-              <size>
-               <width>16777215</width>
-               <height>55</height>
-              </size>
-             </property>
-             <property name="text">
-              <string>图标</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>40</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>16777215</width>
+             <height>50</height>
+            </size>
+           </property>
+           <layout class="QHBoxLayout" name="horizontalLayout_2">
+            <property name="sizeConstraint">
+             <enum>QLayout::SetDefaultConstraint</enum>
+            </property>
+            <property name="leftMargin">
+             <number>0</number>
+            </property>
+            <property name="topMargin">
+             <number>0</number>
+            </property>
+            <property name="rightMargin">
+             <number>0</number>
+            </property>
+            <property name="bottomMargin">
+             <number>0</number>
+            </property>
+            <item>
+             <widget class="QPushButton" name="refreshPbn">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>40</height>
+               </size>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>16777215</width>
+                <height>16777215</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>刷新</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="syncPbn">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>40</height>
+               </size>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>16777215</width>
+                <height>16777215</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>同步</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="modePbn">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>40</height>
+               </size>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>16777215</width>
+                <height>16777215</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>图标</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </widget>
          </item>
          <item>
           <widget class="QListWidget" name="addList">
@@ -182,7 +214,7 @@
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
-        <layout class="QVBoxLayout" name="verticalLayout">
+        <layout class="QVBoxLayout" name="verticalLayout" stretch="1,3">
          <item>
           <widget class="QGroupBox" name="pathWgt">
            <property name="sizePolicy">
@@ -190,6 +222,12 @@
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>126</height>
+            </size>
            </property>
            <property name="maximumSize">
             <size>
@@ -211,7 +249,7 @@
                 <item>
                  <widget class="QLabel" name="label">
                   <property name="sizePolicy">
-                   <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+                   <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
                     <horstretch>0</horstretch>
                     <verstretch>0</verstretch>
                    </sizepolicy>
@@ -230,15 +268,15 @@
                 <item>
                  <widget class="QComboBox" name="imgPathCombox">
                   <property name="sizePolicy">
-                   <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                     <horstretch>0</horstretch>
                     <verstretch>0</verstretch>
                    </sizepolicy>
                   </property>
                   <property name="minimumSize">
                    <size>
-                    <width>100</width>
-                    <height>50</height>
+                    <width>80</width>
+                    <height>35</height>
                    </size>
                   </property>
                  </widget>
@@ -250,7 +288,7 @@
                 <item>
                  <widget class="QLabel" name="label_2">
                   <property name="sizePolicy">
-                   <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+                   <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
                     <horstretch>0</horstretch>
                     <verstretch>0</verstretch>
                    </sizepolicy>
@@ -269,15 +307,15 @@
                 <item>
                  <widget class="QComboBox" name="tarPathCombox">
                   <property name="sizePolicy">
-                   <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                     <horstretch>0</horstretch>
                     <verstretch>0</verstretch>
                    </sizepolicy>
                   </property>
                   <property name="minimumSize">
                    <size>
-                    <width>100</width>
-                    <height>50</height>
+                    <width>80</width>
+                    <height>35</height>
                    </size>
                   </property>
                  </widget>
@@ -312,7 +350,7 @@
                  <item>
                   <widget class="QToolButton" name="toolPbn">
                    <property name="sizePolicy">
-                    <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+                    <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                      <horstretch>0</horstretch>
                      <verstretch>0</verstretch>
                     </sizepolicy>
@@ -320,7 +358,7 @@
                    <property name="minimumSize">
                     <size>
                      <width>90</width>
-                     <height>50</height>
+                     <height>35</height>
                     </size>
                    </property>
                    <property name="text">
@@ -335,15 +373,15 @@
                  <item>
                   <widget class="QComboBox" name="subPathComBox">
                    <property name="sizePolicy">
-                    <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                    <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                      <horstretch>0</horstretch>
                      <verstretch>0</verstretch>
                     </sizepolicy>
                    </property>
                    <property name="minimumSize">
                     <size>
-                     <width>100</width>
-                     <height>50</height>
+                     <width>80</width>
+                     <height>35</height>
                     </size>
                    </property>
                    <property name="styleSheet">
@@ -354,7 +392,7 @@
                  <item>
                   <widget class="QSpinBox" name="numSpinBox">
                    <property name="sizePolicy">
-                    <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                    <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
                      <horstretch>0</horstretch>
                      <verstretch>0</verstretch>
                     </sizepolicy>
@@ -362,7 +400,7 @@
                    <property name="minimumSize">
                     <size>
                      <width>55</width>
-                     <height>50</height>
+                     <height>35</height>
                     </size>
                    </property>
                    <property name="styleSheet">
@@ -407,7 +445,7 @@
                  <item>
                   <widget class="QPushButton" name="updateConfPbn">
                    <property name="sizePolicy">
-                    <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+                    <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                      <horstretch>0</horstretch>
                      <verstretch>0</verstretch>
                     </sizepolicy>
@@ -415,7 +453,7 @@
                    <property name="minimumSize">
                     <size>
                      <width>0</width>
-                     <height>50</height>
+                     <height>35</height>
                     </size>
                    </property>
                    <property name="text">
@@ -426,7 +464,7 @@
                  <item>
                   <widget class="QPushButton" name="lastFileNumPbn">
                    <property name="sizePolicy">
-                    <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+                    <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                      <horstretch>0</horstretch>
                      <verstretch>0</verstretch>
                     </sizepolicy>
@@ -434,7 +472,7 @@
                    <property name="minimumSize">
                     <size>
                      <width>0</width>
-                     <height>50</height>
+                     <height>35</height>
                     </size>
                    </property>
                    <property name="text">
@@ -448,14 +486,14 @@
               <item>
                <widget class="QPushButton" name="clipPbn">
                 <property name="sizePolicy">
-                 <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+                 <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                   <horstretch>0</horstretch>
                   <verstretch>0</verstretch>
                  </sizepolicy>
                 </property>
                 <property name="minimumSize">
                  <size>
-                  <width>0</width>
+                  <width>60</width>
                   <height>0</height>
                  </size>
                 </property>
@@ -473,7 +511,7 @@
           <widget class="QGroupBox" name="imgWgt">
            <property name="minimumSize">
             <size>
-             <width>300</width>
+             <width>0</width>
              <height>0</height>
             </size>
            </property>
@@ -542,8 +580,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>918</width>
-     <height>17</height>
+     <width>824</width>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
