fixed: 修改用户名信息，并将文件的编码改成utf-8

--- a/about_dialog.ui
+++ b/about_dialog.ui
@@ -17,7 +17,7 @@
    </sizepolicy>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>版本信息</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_3" stretch="10,1,2,1">
    <item>
