--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -412,6 +412,9 @@
                    <property name="alignment">
                     <set>Qt::AlignCenter</set>
                    </property>
+                   <property name="maximum">
+                    <number>200</number>
+                   </property>
                   </widget>
                  </item>
                 </layout>
@@ -543,7 +546,7 @@
     <item>
      <widget class="QTabWidget" name="tabWgt">
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="logWgt">
        <attribute name="title">
@@ -588,7 +591,7 @@
      <x>0</x>
      <y>0</y>
      <width>835</width>
-     <height>19</height>
+     <height>17</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
