--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -446,7 +446,7 @@
                   <number>0</number>
                  </property>
                  <item>
-                  <widget class="QPushButton" name="updateConfPbn">
+                  <widget class="QPushButton" name="createMarkdownPbn">
                    <property name="sizePolicy">
                     <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                      <horstretch>0</horstretch>
@@ -460,7 +460,7 @@
                     </size>
                    </property>
                    <property name="text">
-                    <string>配置文件</string>
+                    <string>创建文件</string>
                    </property>
                   </widget>
                  </item>
@@ -591,7 +591,7 @@
      <x>0</x>
      <y>0</y>
      <width>835</width>
-     <height>17</height>
+     <height>19</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
