--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -546,7 +546,7 @@
     <item>
      <widget class="QTabWidget" name="tabWgt">
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="logWgt">
        <attribute name="title">
@@ -609,8 +609,11 @@
      <string>编辑</string>
     </property>
     <addaction name="actionClearLog"/>
+    <addaction name="actionSubDirHistoryFile"/>
     <addaction name="actionGetAssets"/>
     <addaction name="actionRename"/>
+    <addaction name="actionCopyHistoryFilePath"/>
+    <addaction name="actionGetRelativePathOfMeetFile"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
@@ -640,7 +643,10 @@
   </action>
   <action name="actionClearLog">
    <property name="text">
-    <string>清空日志</string>
+    <string>刷新日志/历史文件</string>
+   </property>
+   <property name="toolTip">
+    <string>清空日志/历史文件</string>
    </property>
   </action>
   <action name="actionRename">
@@ -671,6 +677,24 @@
   <action name="actionModifySysFile">
    <property name="text">
     <string>修改系统文件</string>
+   </property>
+  </action>
+  <action name="actionCopyHistoryFilePath">
+   <property name="text">
+    <string>获取相对路径</string>
+   </property>
+  </action>
+  <action name="actionSubDirHistoryFile">
+   <property name="text">
+    <string>刷新子目录文件</string>
+   </property>
+   <property name="toolTip">
+    <string>刷新子目录历史文件列表</string>
+   </property>
+  </action>
+  <action name="actionGetRelativePathOfMeetFile">
+   <property name="text">
+    <string>会议获取相对路径</string>
    </property>
   </action>
  </widget>
