--- a/get_assets_dialog.ui
+++ b/get_assets_dialog.ui
@@ -100,6 +100,35 @@
        </property>
       </widget>
      </item>
+     <item>
+      <widget class="QRadioButton" name="dirRadioButton">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>50</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>文件夹</string>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QRadioButton" name="clipRadioButton">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>50</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>剪切板</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
